2007-02-12  Brian Matherly  <brian@gramps-project.org>
	* src/BaseDoc.py: remove write_at
	* src/docgen/PSDrawDoc.py: remove write_at
	* src/docgen/SvgDrawDoc.py: remove write_at, add center_text
	* src/docgen/OpenOfficeDoc.py: remove write_at
	* src/docgen/PdfDoc.py: remove write_at
	* src/docgen/GtkPrint.py: remove write_at
	* src/plugins/StatisticsChart.py: pass draw style to legend
	* src/docgen/LPRDoc.py: remove write_at
	* src/docgen/ODFDoc.py: remove write_at
	* src/ReportBase/_ReportUtils.py

2007-02-12  Brian Matherly  <brian@gramps-project.org>
	* src/BaseDoc.py: remove unused functions
	* src/docgen/KwordDoc.py: remove unused functions
    * src/docgen/OpenOfficeDoc.py: remove unused functions
    * src/docgen/HtmlDoc.py: remove unused functions
    * src/docgen/LPRDoc.py: remove unused functions
    * src/docgen/ODFDoc.py: remove unused functions

2007-02-12  Don Allingham  <don@gramps-project.org>
	* src/plugins/FindDupes.py: catch window already open message

2007-02-11  Don Allingham  <don@gramps-project.org>
	* src/Merge/_MergePlace.py (MergePlaces.merge): fix typo on 
	add_source_reference

2007-02-07  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/DisplayTabs/_NoteTab.py: move "rich text" notes to 2.3 branch.

2007-02-06  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/PdfDoc.py: provide a more useful error when reportlab crashes

2007-02-06  Douglas Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/_ReportDialog.py: 0000905: Typo in catching exceptions in 
	  buggy reports
	* src/plugins/holidays.xml: 0000906: Canada holidays patch

2007-02-06  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: fix cal/est parsing
	* src/DisplayTabs/_ButtonTab.py: catch window already being open
	* example/gedcom/sample.ged: Add est/cal samples

2007-02-04  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: default Relationship buttons to insenstive.
	Setting an active person will reenable them.
